@@ -18,7 +18,7 @@ class PullRequest(object):
     def __init__(self, repository):
         self._repository = repository
 
-    def get(self, pr, branch=None, merge=False):
+    def get(self, pr, branch=None, merge=False, no_checkout=False):
         pointer = 'head' if not merge else 'merge'
         refspec = 'refs/pull/{0}/{1}'.format(pr, pointer)
 
@@ -26,6 +26,7 @@ class PullRequest(object):
             refspec = '{0}:{1}'.format(refspec, branch)
         subprocess.check_call(['git', 'fetch', self._repository, refspec])
 
-        # FETCH_HEAD stores a reference to the latest fetched commit,
-        # so let's use it if branch isn't specified
-        subprocess.check_call(['git', 'checkout', branch or 'FETCH_HEAD'])
+        if not no_checkout:
+            # FETCH_HEAD stores a reference to the latest fetched commit,
+            # so let's use it if branch isn't specified
+            subprocess.check_call(['git', 'checkout', branch or 'FETCH_HEAD'])
