@@ -42,6 +42,10 @@ If passed, a merge commit of a pull request and a branch it's submitted to
 will be fetched. Please note, it's possible to fetch merge commits of open
 pull requests only.
 
+.TP
+.B \-C, \-\-no\-checkout
+If passed, no checkout to fetched pull request will occur. The step will
+remain up to user.
 
 .SH BUGS
 Bug reports can be submitted to <https://github.com/ikalnytskyi/git\-pr/issues>
