@@ -22,22 +22,38 @@ class TestCLI(unittest.TestCase):
         main(['42'])
 
         PullRequest.assert_called_once_with('origin')
-        PullRequest('origin').get.assert_called_once_with(42, None, False)
+        PullRequest('origin').get.assert_called_once_with(
+            42, None, False, False
+        )
 
     def test_two_arguments(self, PullRequest):
         main(['github', '42'])
 
         PullRequest.assert_called_once_with('github')
-        PullRequest('github').get.assert_called_once_with(42, None, False)
+        PullRequest('github').get.assert_called_once_with(
+            42, None, False, False
+        )
 
     def test_branch_argument(self, PullRequest):
         main(['42', '-b', 'pr/42'])
 
         PullRequest.assert_called_once_with('origin')
-        PullRequest('origin').get.assert_called_once_with(42, 'pr/42', False)
+        PullRequest('origin').get.assert_called_once_with(
+            42, 'pr/42', False, False
+        )
 
     def test_merge_commit_argument(self, PullRequest):
         main(['42', '-m'])
 
         PullRequest.assert_called_once_with('origin')
-        PullRequest('origin').get.assert_called_once_with(42, None, True)
+        PullRequest('origin').get.assert_called_once_with(
+            42, None, True, False
+        )
+
+    def test_no_checkout_argument(self, PullRequest):
+        main(['42', '--no-checkout'])
+
+        PullRequest.assert_called_once_with('origin')
+        PullRequest('origin').get.assert_called_once_with(
+            42, None, False, True
+        )
